update a few more idioms and make fields final if possible